alignment fix in team area

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ nav ul li a{
     color: #fff;
 }
 /* Experience area css end */
+
 .client-description {
     margin: 60px 240px 60px 240px;
     width: 500px;
@@ -287,7 +288,13 @@ footer p{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
 }
+.experience-years{
+    bottom: -9px;
+}
 /* end teams css */
+.client{
+    margin-top: 70px;
+}
 .client-description {
     margin: 25px 20px 25px 25px;
     width: 320px;
